--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">WhoApp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="card1">Card 1</string>
+    <string name="card2">Card 2</string>
+    <string name="card3">Card 3</string>
+    <string name="card4">Card 4</string>
+    <string name="card5">Card 5</string>
+    <string name="card6">Card 6</string>
+    <string name="card7">Card 7</string>
+    <string name="card8">Card 8</string>
+    <string name="card9">Card 9</string>
 </resources>
